# rectangle-independent-set

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rectis/: __main__.py
src/rectis/geometry/: rectangle.py  sweep_line.py
src/rectis/solvers/: __init__.py  solution.py  solvers.py
src/rectis/utils/: parser.py
tests/: test_geometries.py  test_parser.py  test_solvers.py
tests/instances/: large.csv  medium.csv  medium2.csv  tiny.csv  tiny.json
