[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "rectis"  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "0.1.0"  # REQUIRED, although can be dynamic
description = "Rectengular Independent Set Solvers"  # REQUIRED
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [
    { name = "M. Perk", email = "perk@ibr.cs.tu-bs.de" }
]
maintainers = [
    { name = "M. Perk", email = "perk@ibr.cs.tu-bs.de" }
]

classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Simulation Tuber Eats",
    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "gurobipy~=11.0.1",
    "ortools==9.9.3963",
    "matplotlib~=3.8.4",
    "shapely~=2.0.3",
    "tqdm~=4.66.2",
    "pandas~=2.2.2",
    "pytest~=8.1.1"
]


[project.optional-dependencies]
dev = []
test = []


[project.scripts]
rectis = "rectis.__main__:main"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]
